required changes for users to migrate from one version of MapServer to the
next.  Developers are strongly encouraged to document their changes and
their impacts on the users here.  (Please add the most recent changes to 
the top of the list.)

For a complete change history, please see the Git log comments.

7.0 release (TBD)
-----------------

- Require validation on the CGI queryfile parameter. (#4874)

- Apply RFC86 scaletoken substitutions to layer->PROCESSING entries

- RFC108 Heatmap / Kernel-Density Layers

- RFC104 Bitmap Label removal, replaced with inlined truetype font

- RFC103 Layer Level Character Encoding

- RFC99 GD removal

- RFC98 Complex Text Rendering / Text Rendering Overhaul

6.4 release (2013/09/17)
---------------------------

- RFC 101: Support for Content Dependant Legend Rendering

- Add Support for librsvg as an alternative to libsvg-cairo

- RFC100: Add support for raster tile index with tiles of mixed SRS (TILESRS keyword)

- RFC94: Shape Smoothing

- RFC95 : add EXPRESSION {value1,value2,...} support to parser (#4648)

- RFC92: Migration from autotools to cmake (#4617)

- RFC88: Saving MapServer Objects to Strings (#4563)

- RFC90: Enable/Disable Layers in OGC Web Services by IP Lists

- RFC85,89 Added Simplify,SimplityPT and Generalize geomtransform, implementation of
  geomtransform at the layer level

- RFC86: Scale-dependant token replacements (#4538)

- Fix symbol scaling for vector symbols with no height (#4497,#3511)

- Implementation of layer masking for WCS coverages (#4469)

- Implementation of offsets on follow labels (#4399)

6.2.0 release (git branch-6-2) 2012/11/14:
--------------------------------------------------

- Fix WFS GetFeature result bounds are not written in requested projection (#4494)

- Fixed wrong size in LegendURL of root layer (#4441)

- Fixed wms_style_name in GetMap requests (#4439)

- Fix segfault in queryByFilter function in MapScript
