@@ -2078,9 +2078,6 @@ int msSLDParsePointSymbolizer(CPLXMLNode *psRoot, layerObj *psLayer,
 int msSLDParseExternalGraphic(CPLXMLNode *psExternalGraphic,
                               styleObj *psStyle,  mapObj *map)
 {
-  /* needed for libcurl function msHTTPGetFile in maphttp.c */
-#if defined(USE_CURL)
-
   char *pszFormat = NULL;
   CPLXMLNode *psURL=NULL, *psFormat=NULL, *psTmp=NULL;
   char *pszURL=NULL;
@@ -2092,12 +2089,13 @@ int msSLDParseExternalGraphic(CPLXMLNode *psExternalGraphic,
   if (psFormat && psFormat->psChild && psFormat->psChild->pszValue)
     pszFormat = psFormat->psChild->pszValue;
 
-  /* supports GIF and PNG */
+  /* supports GIF and PNG and SVG */
   if (pszFormat &&
       (strcasecmp(pszFormat, "GIF") == 0 ||
        strcasecmp(pszFormat, "image/gif") == 0 ||
        strcasecmp(pszFormat, "PNG") == 0 ||
-       strcasecmp(pszFormat, "image/png") == 0)) {
+       strcasecmp(pszFormat, "image/png") == 0 ||
+       strcasecmp(pszFormat, "image/svg+xml") == 0)) {
 
     /* <OnlineResource xmlns:xlink="http://www.w3.org/1999/xlink" xlink:type="simple" xlink:href="http://www.vendor.com/geosym/2267.svg"/> */
     psURL = CPLGetXMLNode(psExternalGraphic, "OnlineResource");
@@ -2110,6 +2108,14 @@ int msSLDParseExternalGraphic(CPLXMLNode *psExternalGraphic,
       }
       if (psTmp && psTmp->psChild) {
         pszURL = (char*)psTmp->psChild->pszValue;
+
+        /* validate the ExternalGraphic parameter */
+        if(msValidateParameter(pszURL, msLookupHashTable(&(map->web.validation), "sld_external_graphic"),
+                               NULL, NULL, NULL) != MS_SUCCESS) {
+          msSetError(MS_WEBERR, "SLD ExternalGraphic OnlineResource value fails to validate against sld_external_graphic VALIDATION", "mapserv()");
+          return MS_FAILURE;
+        }
+
 
         /*external symbols using http will be automaticallly downloaded. The file should be
           saved in a temporary directory (msAddImageSymbol) #2305*/
@@ -2132,9 +2138,6 @@ int msSLDParseExternalGraphic(CPLXMLNode *psExternalGraphic,
   }
 
   return MS_SUCCESS;
-#else
-  return MS_FAILURE;
-#endif
 }
 
 
